[package]
name = "kopparoxid"
version = "0.0.1"
authors = ["Martin Wernstål <m4rw3r@gmail.com>"]

[dependencies]
bitflags    = "*"
chomp       = "*"
freetype-rs = "*"
glium       = "*"
glutin      = "*"
log         = "*"
num         = "*"
mio         = "*"
time        = "*"
env_logger  = "*"

kopparoxid-term   = { path = "./term" }
kopparoxid-system = { path = "./system" }
